<resources>
    <string name="app_name">Personal Assistant</string>
    <string name="calculator">Calculator</string>
    <string name="physical_activities">Physical Activities</string>
    <string name="step_count">Step Count</string>
    <string name="change_goal">Change Goal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Todo</string>
    <string name="notes">Notes</string>
    <string name="gps">GPS</string>
    <string name="docs">Docs</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_api_key">YOUR_API_KEY</string>
    <string name="today">Today</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account_signup">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="skip">Skip</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="room_name">Room Name</string>
    <string name="firebase_realtime_db_url">https://personal-assistant-89c5a-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="connect_internet">Connect to internet to join or create room</string>
    <string name="ask_the_room_owner_for_the_room_code_to_join_the_class">Ask the room owner for the room code to join the class.</string>
    <string name="room_code">Room code</string>
    <string name="upload_file">Upload File</string>

</resources>