<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".JoinRoomActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/baseline_close_24"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/join_room"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/tick"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:src="@drawable/baseline_check_24"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:text="@string/ask_the_room_owner_for_the_room_code_to_join_the_class"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/RoomCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/room_code"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="15dp" />
    </LinearLayout>
</LinearLayout>